# pctx

./: .gitignore  .pctx.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  exit_codes.rs  lib.rs  main.rs  stats.rs
src/config/: defaults.rs  file.rs  mod.rs
src/content/: mod.rs  reader.rs  truncator.rs
src/filter/: binary.rs  mod.rs  patterns.rs
src/output/: clipboard.rs  file.rs  formatter.rs  json_types.rs  mod.rs  stdout.rs  tree.rs
src/output/snapshots/: pctx__output__formatter__tests__snapshot_markdown_content_without_trailing_newline.snap  pctx__output__formatter__tests__snapshot_markdown_fence_grows_for_quadruple_backtick.snap  pctx__output__formatter__tests__snapshot_markdown_fence_grows_for_triple_backtick.snap  pctx__output__formatter__tests__snapshot_markdown_two_files.snap  pctx__output__formatter__tests__snapshot_markdown_with_tree.snap  pctx__output__formatter__tests__snapshot_plain_two_files.snap  pctx__output__formatter__tests__snapshot_plain_with_tree.snap  pctx__output__formatter__tests__snapshot_xml_escapes_cdata_injection.snap  pctx__output__formatter__tests__snapshot_xml_escapes_path_attribute.snap  pctx__output__formatter__tests__snapshot_xml_two_files.snap  pctx__output__tree__tests__snapshot_tree_deep_nest.snap  pctx__output__tree__tests__snapshot_tree_siblings_and_nested.snap  (+1 more)
src/scanner/: git.rs  mod.rs  walker.rs
tests/: edge_cases.rs  filters_and_paths.rs  integration_test.rs  output_and_formats.rs  subcommands.rs
tests/common/: mod.rs
